Fixed chat box to scroll on overflow

--- a/src/stylesheets/main-page.css
+++ b/src/stylesheets/main-page.css
@@ -6,6 +6,26 @@ html, body {
     height: 100%;
 }
 
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #252526;
+}
+
+::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #252526;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
 .no-select {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -44,11 +64,11 @@ html, body {
 }
 
 #chat-container {
-    /*position: absolute;*/
+    position: absolute;
 }
 
 #chat-area {
-    /*overflow-y: scroll;*/
+    overflow-y: auto;
 }
 
 #chat-input input {
